#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package Detector
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-03-29
2016-01-28 Mikhail S. Dubrovin
- add examples/ex_save_mec_cspad*_imges_in_tiff.py (PSAS-211)
	
Tag: V00-03-28
2016-01-27 Mikhail S. Dubrovin
- AreaDetector.py - use mask_comb in stead of status_as_mask, swap mbits bits 1 and 2 for status and calib (PSAS-139) 

Tag: V00-03-27
2016-01-26 Mikhail S. Dubrovin
- AreaDetector.py - improve raw, add mask_comb, use mask_comb in calib, add ex_cspad2x2_mask_mec.py (PSAS-139)

Tag: V00-03-26
2016-01-22 Mikhail S. Dubrovin
- NDArrProducerStore::Create 
	- add suppor for QUARTZ4A150, RAYONIX, FCCD as Camera
	- do not throw exception if dettype is unknown, return NULL pointer
- DetectorAccess.cpp - in methods like data_uint16_2 return empty ndarray if m_nda_prod == NULL
	
Tag: V00-03-25
2016-01-21 Mikhail S. Dubrovin
- AreaDetector.py - in status_as_mask do not re-shape cspad2x2 arr, it is already (2,185,388) from status()

Tag: V00-03-24
2016-01-20 Mikhail S. Dubrovin
- AreaDetector.py - in calib change order of corrections; 1) common mode, 2) mask from status (PSAS-139) 
	
Tag: V00-03-23
2016-01-20 Mikhail S. Dubrovin
- AreaDetector.py - fix return from status_as_mask, ex_all_dets.py - update example for det.mask
	
Tag: V00-03-22
2016-01-15 TJ Lane
- Fix issue where aliases were not correctly mapped for non-AreaDetectors

Tag: V00-03-21
2016-01-07 TJ Lane
- Fix typo

Tag: V00-03-20
2016-01-07 TJ Lane
- Added ConfigDataDetector type

Tag: V00-03-19
2016-01-07 Mikhail S. Dubrovin
- PyDetectorAccess.py - fix issue with initialization of self.mbits in constructor (PSAS-139)

Tag: V00-03-18
2016-01-06 Christopher O'Grady